main/ocaml5: move from community

--- a/main/ocaml5/APKBUILD
+++ b/main/ocaml5/APKBUILD
@@ -22,7 +22,7 @@ subpackages="
 source="https://caml.inria.fr/pub/distrib/ocaml-${pkgver%.*}/ocaml-$pkgver.tar.xz"
 builddir="$srcdir/ocaml-$pkgver"
 
-# Current native compiler support in 5.2.x
+# Current native compiler support in 5.3.x
 case "$CARCH" in
 x86_64|aarch64|riscv64|s390x|ppc64le)
 	_native_compiler=true
@@ -70,15 +70,13 @@ build() {
 }
 
 check() {
-	local allow_fail='no'
-	case "$CARCH" in
-	x86)
-		# tests/parallel/domain_parallel_spawn_burn.ml
-		allow_fail='yes' ;;
-	esac
-
 	make ocamltest
-	make -C testsuite parallel || [ "$allow_fail" = yes ]
+	local i; for i in $(seq 0 5); do
+		[ $i -eq 0 ] || msg "Retrying ($i/5)..."
+		make -C testsuite parallel && return 0
+		sleep 5
+	done
+	return 1
 }
 
 package() {
