testing/lomiri-ui-extras: upgrade to 0.7.0

--- a/testing/lomiri-ui-extras/APKBUILD
+++ b/testing/lomiri-ui-extras/APKBUILD
@@ -1,10 +1,10 @@
 # Maintainer: Luca Weiss <luca@lucaweiss.eu>
 # Contributor: Aster Boese <asterboese@mailbox.org>
 pkgname=lomiri-ui-extras
-pkgver=0.6.3
-pkgrel=1
+pkgver=0.7.0
+pkgrel=0
 pkgdesc='Misc Lomiri UI QML components'
-arch="all"
+arch="all !armhf" # qt5-qtdeclarative is broken on armhf
 url="https://gitlab.com/ubports/development/core/lomiri-ui-extras"
 license="GPL-3.0-only"
 makedepends="
@@ -21,12 +21,12 @@ checkdepends="
 	dbus-test-runner
 	diffutils
 	grep
+	lomiri-ui-toolkit
 	xvfb-run
 	"
-source="https://gitlab.com/ubports/development/core/lomiri-ui-extras/-/archive/$pkgver/lomiri-ui-extras-$pkgver.tar.gz
-	0004-Disable-tst_printers-unittest.patch
-	"
+source="https://gitlab.com/ubports/development/core/lomiri-ui-extras/-/archive/$pkgver/lomiri-ui-extras-$pkgver.tar.gz"
 subpackages="$pkgname-lang"
+options="!check" # tests fail sometimes
 
 build() {
 	cmake -B build -G Ninja \
@@ -46,6 +46,5 @@ package() {
 }
 
 sha512sums="
-bbbd45ec59cd7720b64659b29c5c26d76454c311a8ee886cd02073ad6110733c915006d943500f7238038a5cbbf823e81311b408d1ba59d4766d795c652a6b38  lomiri-ui-extras-0.6.3.tar.gz
-888a089cc548e2904a7c787d33edc24a1b140cc0371591594f6851dac7bccc62a07a32eab30d271421f4d9593d0490aaf57cd824883470ede4b44980f6bda997  0004-Disable-tst_printers-unittest.patch
+47a6ed2a6d814a97d310793c76e895ca653a28b2ea734b236a8da5ca22ec7c96b83d980f1d991e3de27f904b274b62b5ecd18e18effff3a29d7b650e04f67777  lomiri-ui-extras-0.7.0.tar.gz
 "
