community/muon: move from testing

--- a/community/muon/APKBUILD
+++ b/community/muon/APKBUILD
@@ -80,10 +80,11 @@ build() {
 }
 
 check() {
-	build-wrap/muon -C build-wrap test -j "${JOBS:-0}" -R -d dots
-	rm -r subprojects/meson-tests
-	cp -a subprojects/meson-tests.orig subprojects/meson-tests
-	build/muon -C build test -j "${JOBS:-0}" -R -d dots
+	local d; for d in build-wrap build; do
+		$d/muon -C $d test -j "${JOBS:-0}" -R -d dots
+		rm -r subprojects/meson-tests
+		cp -a subprojects/meson-tests.orig subprojects/meson-tests
+	done
 }
 
 package() {
