main/libxkbcommon: force libxml2-dev 2.13
The upgrade of libxml2 to version 2.14 has been reverted because it
causes all kinds of build issues, but is still available on the
builders. Make sure version 2.13 is picked when building libxkbcommon.

--- a/main/libxkbcommon/APKBUILD
+++ b/main/libxkbcommon/APKBUILD
@@ -12,7 +12,7 @@ depends_dev="libxkbcommon-x11=$pkgver-r$pkgrel"
 makedepends="
 	bison
 	libxcb-dev
-	libxml2-dev
+	libxml2-dev~2.13
 	meson
 	wayland-dev
 	wayland-protocols
