main/mariadb: force libxml2-dev 2.13
The upgrade of libxml2 to version 2.14 has been reverted because it
causes all kinds of build issues, but is still available on the
builders. Make sure version 2.13 is picked when building mariadb.

--- a/main/mariadb/APKBUILD
+++ b/main/mariadb/APKBUILD
@@ -39,7 +39,7 @@ makedepends="
 	libaio-dev
 	libarchive-dev
 	libevent-dev
-	libxml2-dev
+	libxml2-dev~2.13
 	linux-headers
 	linux-pam-dev
 	ncurses-dev
