main/uwsgi: force libxml2-dev 2.13
The upgrade of libxml2 to version 2.14 has been reverted because it
causes all kinds of build issues, but is still available on the
builders. Make sure version 2.13 is picked when building uwsgi.

--- a/main/uwsgi/APKBUILD
+++ b/main/uwsgi/APKBUILD
@@ -23,7 +23,7 @@ makedepends="
 	linux-headers
 	linux-pam-dev
 	libpq-dev
-	libxml2-dev
+	libxml2-dev~2.13
 	libxslt-dev
 	lua5.3-dev
 	openssl-dev
