main/postgresql17: force libxml2-dev 2.13
The upgrade of libxml2 to version 2.14 has been reverted because it
causes all kinds of build issues, but is still available on the
builders. Make sure version 2.13 is picked when building postgresql17

--- a/main/postgresql17/APKBUILD
+++ b/main/postgresql17/APKBUILD
@@ -34,7 +34,7 @@ makedepends="$depends_dev
 	bison
 	docbook-xsl-nons
 	flex
-	libxml2-dev
+	libxml2-dev~2.13
 	linux-headers
 	llvm$_llvmver-dev
 	openldap-dev
