main/clan16: force libxml2-dev 2.13
The upgrade of libxml2 to version 2.14 has been reverted because it
causes all kinds of build issues, but is still available on the
builders. Make sure version 2.13 is picked when building clang16.

--- a/main/clang16/APKBUILD
+++ b/main/clang16/APKBUILD
@@ -16,7 +16,7 @@ install="$pkgname.pre-upgrade"
 makedepends="
 	cmake
 	help2man
-	libxml2-dev
+	libxml2-dev~2.13
 	llvm$_llvmver-dev
 	llvm$_llvmver-static
 	llvm$_llvmver-test-utils
