main/libxslt: rebuild against libxml2-2.13

--- a/main/libxslt/APKBUILD
+++ b/main/libxslt/APKBUILD
@@ -2,7 +2,7 @@
 # Contributor: Francesco Colista <fcolista@alpinelinux.org>
 pkgname=libxslt
 pkgver=1.1.43
-pkgrel=2
+pkgrel=3
 pkgdesc="XML stylesheet transformation library"
 url="http://xmlsoft.org/XSLT/"
 arch="all"
@@ -10,7 +10,7 @@ license="X11"
 makedepends="
 	libgcrypt-dev
 	libgpg-error-dev
-	libxml2-dev
+	libxml2-dev~2.13
 	"
 subpackages="
 	$pkgname-static
