--- a/main/postgresql16/APKBUILD
+++ b/main/postgresql16/APKBUILD
@@ -34,7 +34,7 @@ makedepends="$depends_dev
 	bison
 	docbook-xsl-nons
 	flex
-	libxml2-dev
+	libxml2-dev~2.13
 	linux-headers
 	llvm$_llvmver-dev
 	openldap-dev
