main/wayland: rebuild against libxml2-2.13
The upgrade of libxml2 to version 2.14 has been reverted because it
causes all kinds of build issues, but is still available on the
builders. Make sure version 2.13 is picked when building wayland.

--- a/main/wayland/APKBUILD
+++ b/main/wayland/APKBUILD
@@ -4,7 +4,7 @@
 # Maintainer: Peter Shkenev <santurysim@gmail.com>
 pkgname=wayland
 pkgver=1.23.1
-pkgrel=2
+pkgrel=3
 pkgdesc="A computer display server protocol"
 url="https://wayland.freedesktop.org"
 arch="all"
@@ -15,7 +15,7 @@ depends_dev="
 	"
 makedepends="
 	$depends_dev
-	libxml2-dev
+	libxml2-dev~2.13
 	meson
 	"
 subpackages="
