main/fontconfig: disable test that tries to use internet
see attached comment

--- a/main/fontconfig/APKBUILD
+++ b/main/fontconfig/APKBUILD
@@ -2,7 +2,7 @@
 # Maintainer: Natanael Copa <ncopa@alpinelinux.org>
 pkgname=fontconfig
 pkgver=2.15.0
-pkgrel=2
+pkgrel=3
 pkgdesc="Library for configuring and customizing font access"
 url="https://www.freedesktop.org/wiki/Software/fontconfig"
 arch="all"
@@ -34,6 +34,10 @@ build() {
 		--enable-docs \
 		--disable-nls
 	make
+
+	# test tries to download google fonts from internet
+	# https://gitlab.freedesktop.org/fontconfig/fontconfig/-/blob/2.15.0/test/run-test.sh#L435
+	chmod -x test/test-crbug1004254
 }
 
 check() {
