main/py3-distlib: disable tests using network
doesn't affect the built package = no need for a rebuild

--- a/main/py3-distlib/APKBUILD
+++ b/main/py3-distlib/APKBUILD
@@ -22,7 +22,7 @@ build() {
 }
 
 check() {
-	PYTHONHASHSEED=0 python3 -m unittest discover tests
+	PYTHONHASHSEED=0 SKIP_ONLINE=1 python3 -m unittest discover tests
 }
 
 package() {
