--- a/main/augeas/APKBUILD
+++ b/main/augeas/APKBUILD
@@ -1,12 +1,12 @@
 # Maintainer: Natanael Copa <ncopa@alpinelinux.org>
 pkgname=augeas
 pkgver=1.12.0
-pkgrel=9
+pkgrel=10
 pkgdesc="A configuration editing tool"
 url="http://augeas.net"
 arch="all"
 license="LGPL-2.1-or-later"
-makedepends="autoconf automake libxml2-dev readline-dev libtool"
+makedepends="autoconf automake libxml2-dev~2.13 readline-dev libtool"
 subpackages="$pkgname-static $pkgname-dev $pkgname-doc $pkgname-tests::noarch $pkgname-libs"
 source="http://download.augeas.net/augeas-$pkgver.tar.gz
 	fix-test.patch
