main/bacula: use standard chown syntax
the dot syntax is not POSIX and not supported by busybox chown

https://pubs.opengroup.org/onlinepubs/9799919799/utilities/chown.html

--- a/main/bacula/APKBUILD
+++ b/main/bacula/APKBUILD
@@ -95,7 +95,7 @@ package() {
 		/etc/$pkgname/scripts/mtx-changer* \
 		/etc/$pkgname/*.conf
 	do
-		chown $pkgusers.$pkggroups "$pkgdir"$dir
+		chown $pkgusers:$pkggroups "$pkgdir"$dir
 	done
 
 	find "$pkgdir"/usr/lib -iname libbaccats* -type l -delete
