main/netcf: force libxml 2.13
The upgrade of libxml2 to version 2.14 has been reverted because it
causes all kinds of build issues, but is still available on the
builders. Make sure version 2.13 is picked when building netcf.

--- a/main/netcf/APKBUILD
+++ b/main/netcf/APKBUILD
@@ -6,7 +6,7 @@ pkgdesc="Cross-platform network configuration library"
 arch="all"
 url="https://fedorahosted.org/released/netcf"
 license="LGPL-2.1-or-later"
-makedepends="augeas-dev libgcrypt-dev libnl3-dev libxml2-dev libxslt-dev
+makedepends="augeas-dev libgcrypt-dev libnl3-dev libxml2-dev~2.13 libxslt-dev
 	linux-headers pkgconfig readline-dev"
 subpackages="$pkgname-dev $pkgname-doc $pkgname-libs"
 source="https://releases.pagure.org/netcf/netcf-$pkgver.tar.gz"
