--- a/main/py3-lxml/APKBUILD
+++ b/main/py3-lxml/APKBUILD
@@ -11,7 +11,7 @@ arch="all"
 license="BSD-3-Clause AND ZPL-2.0 AND ElementTree"
 makedepends="
 	cython
-	libxml2-dev
+	libxml2-dev~2.13
 	libxslt-dev
 	py3-gpep517
 	py3-setuptools
