main/icecast: force libxml 2.13
The upgrade of libxml2 to version 2.14 has been reverted because it
causes all kinds of build issues, but is still available on the
builders. Make sure version 2.13 is picked when building icecast.

--- a/main/icecast/APKBUILD
+++ b/main/icecast/APKBUILD
@@ -11,7 +11,7 @@ license="GPL-2.0-only"
 install="$pkgname.pre-install"
 pkgusers="icecast"
 pkggroups="icecast"
-makedepends="libxslt-dev libxml2-dev libogg-dev libvorbis-dev libtheora-dev openssl-dev>3 curl-dev"
+makedepends="libxslt-dev libxml2-dev~2.13 libogg-dev libvorbis-dev libtheora-dev openssl-dev>3 curl-dev"
 subpackages="$pkgname-doc $pkgname-openrc"
 source="https://downloads.xiph.org/releases/icecast/icecast-$pkgver.tar.gz
 	conf-change-owner.patch
