main/multipath-tools: fix tests in rootbld

--- a/main/multipath-tools/APKBUILD
+++ b/main/multipath-tools/APKBUILD
@@ -28,6 +28,7 @@ source="$pkgname-$pkgver.tar.gz::https://github.com/opensvc/multipath-tools/arch
 	0001-Disable-O2.patch
 	fix-implicit-function-declaration-error.patch
 	fix-basename.patch
+	disable-devt-test.patch
 	"
 
 build() {
@@ -69,4 +70,5 @@ e81462b22c0cbc92ea935d7544b9f9a0c4ccbcf13f3bc03dadf6de96407c9cf49964c9bbf02f12a1
 12efc27a7fd492834dd1d86d67faa1a6884142779f5452ada5373d893cd441572e07f9f9ea441dd92d49274ccc21a53d70f2af8a49c63060ff7490b93e3cb58d  0001-Disable-O2.patch
 b4ef63f5cde2ff700fa5933280c4017056f0d04660889620ed215b23c35e79daf9e0330bd946109c410f33b718d0503e1a1189c12cbdc299e7721b59aff56cf8  fix-implicit-function-declaration-error.patch
 3f65a2006c03ba168eb3fcec537042ae9e0ddbcab48a051970fcc477bd88b2eeb16db79c9f06d4fc7b7e06411d46e159b7d13d2fe9613ba5be1ed68d9e66e54c  fix-basename.patch
+b9d1647a9b025a6e1793cf2ccad4df48b9b46d73dd990fed7185c7e6d2736905650ef453b70d8ba603132df5247243d99f917de69c391aae72b01f2997c99f10  disable-devt-test.patch
 "
