community/ikiwiki: add webp support to img plugin

--- a/community/ikiwiki/APKBUILD
+++ b/community/ikiwiki/APKBUILD
@@ -2,7 +2,7 @@
 # Maintainer: Antoine Martin (ayakael) <dev@ayakael.net>
 pkgname=ikiwiki
 pkgver=3.20250221
-pkgrel=0
+pkgrel=1
 pkgdesc="Ikiwiki is a wiki compiler. It converts wiki pages into HTML pages suitable for publishing on a website."
 arch="noarch"
 license="GPL-2.0-or-later"
@@ -23,7 +23,10 @@ depends="
 	perl-yaml
 	perl-yaml-libyaml
 	"
-source="https://git.joeyh.name/index.cgi/ikiwiki.git/snapshot/ikiwiki-$pkgver.tar.gz"
+source="
+	https://git.joeyh.name/index.cgi/ikiwiki.git/snapshot/ikiwiki-$pkgver.tar.gz
+	plugin-img-add-webp.patch
+	"
 subpackages="$pkgname-doc"
 
 prepare() {
@@ -47,4 +50,5 @@ package() {
 
 sha512sums="
 8dc46528bdc6071cd731fe65be4495df528222b7fe32b9c975426a03f3348dfc99191839af8791c73a1d1a72107c5c4f571e583b4c2c410d92a49b582c462414  ikiwiki-3.20250221.tar.gz
+9a7fb16ca9f53b19d380d050d500eac5e2ad9a8865688974fe3269b4e80e660fd5c07fe37a0a914bd35e363a2006abcdf42b6f903e084264f20492a0a8559d4b  plugin-img-add-webp.patch
 "
