testing/aws-lc: upgrade to 1.49.0
https://github.com/aws/aws-lc/releases/tag/v1.49.0

--- a/testing/aws-lc/APKBUILD
+++ b/testing/aws-lc/APKBUILD
@@ -1,8 +1,8 @@
 # Maintainer: Celeste <cielesti@protonmail.com>
 maintainer="Celeste <cielesti@protonmail.com>"
 pkgname=aws-lc
-pkgver=1.48.1
-pkgrel=1
+pkgver=1.49.0
+pkgrel=0
 pkgdesc="General-purpose cryptographic library based on BoringSSL and OpenSSL"
 url="https://github.com/aws/aws-lc"
 # armhf, armv7, ppc64le, s390x: tests fail
@@ -38,16 +38,7 @@ build() {
 }
 
 check() {
-	local allow_fail='no'
-	case "$CARCH" in
-	aarch64)
-		# tests pass on CI in under 15 minutes,
-		# but keep getting stuck on the builders
-		allow_fail='yes' ;;
-	esac
-
-	timeout 30m cmake --build build --target run_tests \
-		|| [ "$allow_fail" = yes ]
+	timeout 30m cmake --build build --target run_tests
 }
 
 package() {
@@ -61,6 +52,6 @@ tools() {
 }
 
 sha512sums="
-a1b2e121ad8051c9b7f07690623beb71a3706f9eb422f6978bc03cb8071cff1e360981be1b4d19c3da8725e12f7b458efbe8c773cb5f9784fea9c4030755f3ef  aws-lc-1.48.1.tar.gz
-a9d1d4d785c7efaee967b150c25779488786d7941be4990fd01a9f18225c91c2dfc40e16bbf0b52283aa37c3abd20ed27d1440eadaf2e1e2be8b852caa0bf241  move-cmake-dirs.patch
+90d3e2b2c61d4cafddbb22f18499dcab91519d90688d59673efa609e2f2b16b11549a843cfa7a92f25fc9d7f1d6ef13194373dfafee4a7493b5aacf152afcd08  aws-lc-1.49.0.tar.gz
+fe3e89ddac28ac8174560e6d86a3d29b1ada3a4de85c5917294e580832a27c9523f1cd35cac04fbff5d9a6d873489ebb614873d8328d306863dcbfc0e26f3a0b  move-cmake-dirs.patch
 "
