community/wpewebkit: enable on loongarch64

--- a/community/wpewebkit/APKBUILD
+++ b/community/wpewebkit/APKBUILD
@@ -5,7 +5,7 @@ pkgver=2.46.6
 pkgrel=0
 pkgdesc="WebKit port optimized for embedded devices"
 url="https://wpewebkit.org/"
-arch="all !loongarch64"
+arch="all"
 license="other"
 _llvmver=19
 makedepends="
@@ -47,6 +47,8 @@ subpackages="$pkgname-dev $pkgname-doc"
 source="https://wpewebkit.org/releases/wpewebkit-$pkgver.tar.xz
 	armv6kz.patch
 	gettext.patch
+	loongarch64-fix-simde.patch
+	skia-add-target_sources-for-loongarch64.patch
 	"
 options="!check"
 
@@ -70,7 +72,7 @@ esac
 
 build() {
 	case "$CARCH" in
-	s390x|armhf|armv7|x86|ppc64le)
+	s390x|armhf|armv7|x86|ppc64le|loongarch64)
 		# llint/LowLevelInterpreter.cpp fails to build with fortify source here
 		export CXXFLAGS="$CXXFLAGS -U_FORTIFY_SOURCE"
 		;;
@@ -125,4 +127,6 @@ sha512sums="
 459921bc383dd4618bc206ecf007b6d48b4e099037685b68cf2734d58456ab2faa5b9030c1a246d0006ebaf33842cbb1d8c286d7d96ba0cc9a3b7c79daafad5d  wpewebkit-2.46.6.tar.xz
 8c89d4ac737a2bd6d970fec3ecb9d0b72d61ffb9a37d4b0b56bc0106914398a65319e940c593c0305fc40d6900aac2a8b4fc3bafc9a96062063d15abd1f5039d  armv6kz.patch
 f84c737a3d31453ba266f45c7b43803bbeb5d8b62e6e23005e1775d4ae2d7215614d1233c25b9953387027cea8e1f10a3dd904417333750c763cd61c9c7bc379  gettext.patch
+3dfb8db878a02df6e2f33a477adacabd1a6bd093eb0bf0434b9f7d48a4d6eae289a52b593975a6c4f2a2b94e31b420606b72f787a2b1729cb77835a98a1257d8  loongarch64-fix-simde.patch
+1f53c218fa4a4b6512344c21cd6d54d053fbd28bce9c543e30101f7ca54d6da0ef28a1f0ba54210088c6a2d0eddf26509a782862089694c25efbaf582cefe10a  skia-add-target_sources-for-loongarch64.patch
 "
