community/pyside6: make -dev depend on py3-pyside6
Required as the CMake file refers to libpyside6.abi3.so.6.8.0.2 which is
provided by that package.

--- a/community/pyside6/APKBUILD
+++ b/community/pyside6/APKBUILD
@@ -2,7 +2,7 @@
 # Maintainer:
 pkgname=pyside6
 pkgver=6.8.0.2
-pkgrel=2
+pkgrel=3
 _llvmver=19
 pkgdesc="Enables the use of Qt6 APIs in Python applications"
 url="https://doc.qt.io/qtforpython-6/"
@@ -10,6 +10,7 @@ url="https://doc.qt.io/qtforpython-6/"
 # armhf blocked by qt6-qtdeclarative
 arch="all !riscv64 !armhf"
 license="LGPL-3.0-only AND GPL-2.0-only"
+depends_dev="py3-pyside6"
 makedepends="
 	bash
 	clang$_llvmver-dev
