--- a/community/kwidgetsaddons/APKBUILD
+++ b/community/kwidgetsaddons/APKBUILD
@@ -3,7 +3,7 @@
 maintainer="team/kde <bribbers@disroot.org>"
 pkgname=kwidgetsaddons
 pkgver=6.12.0
-pkgrel=0
+pkgrel=1
 pkgdesc="Addons to QtWidgets"
 arch="all"
 url="https://community.kde.org/Frameworks"
@@ -12,6 +12,8 @@ depends_dev="qt6-qtbase-dev"
 makedepends="$depends_dev
 	doxygen
 	extra-cmake-modules
+	py3-build
+	py3-setuptools
 	qt6-qttools-dev
 	samurai
 	"
@@ -20,7 +22,25 @@ checkdepends="
 	mesa-dri-gallium
 	xvfb-run
 	"
-subpackages="$pkgname-dev $pkgname-doc $pkgname-lang"
+subpackages="
+	$pkgname-dev
+	$pkgname-doc
+	$pkgname-lang
+	"
+
+case "$CARCH" in
+	riscv64|armhf) ;;
+	*)
+		makedepends="$makedepends
+			py3-shiboken6
+			pyside6-dev
+			python3-dev
+			"
+		subpackages="$subpackages
+			py3-$pkgname:_py3
+			"
+		;;
+esac
 _repo_url="https://invent.kde.org/frameworks/kwidgetsaddons.git"
 source="https://download.kde.org/stable/frameworks/${pkgver%.*}/kwidgetsaddons-$pkgver.tar.xz"
 
@@ -40,6 +60,10 @@ check() {
 
 package() {
 	DESTDIR="$pkgdir" cmake --install build
+}
+
+_py3() {
+	amove usr/lib/python*
 }
 
 sha512sums="
