testing/orage: upgrade to 4.20.1 upgrade, re-enable X11 tray icon (breaks wayland compat)

--- a/testing/orage/APKBUILD
+++ b/testing/orage/APKBUILD
@@ -1,7 +1,7 @@
 # Contributor: Saijin-Naib <Saijin-Naib_package-maintenance@outlook.com>
 # Maintainer: Saijin-Naib <Saijin-Naib_package-maintenance@outlook.com>
 pkgname=orage
-pkgver=4.20.0
+pkgver=4.20.1
 pkgrel=0
 pkgdesc="Calendar for Xfce"
 url="https://docs.xfce.org/apps/orage/start"
@@ -9,7 +9,7 @@ arch="all"
 license="GPL-2.0-or-later"
 makedepends="
 	dbus-dev
-	gettext
+	gettext-dev
 	glib-dev
 	gtk+3.0-dev
 	libical-dev
@@ -25,7 +25,7 @@ builddir="$srcdir/$pkgname-$pkgname-$pkgver/"
 
 prepare() {
 	default_prepare
-	./autogen.sh
+	./autogen.sh --enable-x11-tray-icon
 }
 
 build() {
@@ -41,5 +41,5 @@ package() {
 }
 
 sha512sums="
-ee57392dabc39c5aac19356c57f2b5e66a63a7af324b444da5fa17fbe3ceee870919ccbd43899012688ca093c27380c348a0a9c8d865e6bb016fb44d526026b4  orage-4.20.0.tar.gz
+c0581282509dc80f4d0be06628ed744a1415f349b5bba7873f65e0489cb3e2cddfb5946aec81bbbb8f2e1819c083fff7a36e9039ec803c1887ee410dd260ea73  orage-4.20.1.tar.gz
 "
