testing/mkbrr: upgrade to 1.6.1
add patch to disable self-update

--- a/testing/mkbrr/APKBUILD
+++ b/testing/mkbrr/APKBUILD
@@ -1,7 +1,7 @@
 # Contributor: Fabricio Silva <hi@fabricio.dev>
 maintainer="Fabricio Silva <hi@fabricio.dev>"
 pkgname=mkbrr
-pkgver=1.4.0
+pkgver=1.6.1
 pkgrel=0
 pkgdesc="mkbrr is a tool to create, modify and inspect torrent files."
 url="https://github.com/autobrr/mkbrr"
@@ -9,7 +9,10 @@ arch="all !x86 !armhf !armv7" # tests failing on 32bits
 license="GPL-2.0-or-later"
 options="net" # net for go
 makedepends="go"
-source="$pkgname-$pkgver.tar.gz::https://github.com/autobrr/mkbrr/archive/v$pkgver.tar.gz"
+source="
+	$pkgname-$pkgver.tar.gz::https://github.com/autobrr/mkbrr/archive/v$pkgver.tar.gz
+	no-self-update.patch
+	"
 
 prepare() {
 	default_prepare
@@ -32,5 +35,6 @@ package() {
 }
 
 sha512sums="
-baed7fd607bda43fc2a6b855494261d2ea0dc0c9a1424fef6b953124683709472b2efdf49a80f9798ff369e00d3aa42dfe42e8eb2bc872882780352fa76d897f  mkbrr-1.4.0.tar.gz
+73b8937024a7809846d2c1eeb65a906a093249f91fbf59c9194ba4a0f7fd1e9d6244367dd6980f861e1db865043281176325856563c58f17eb31edffce5aebf3  mkbrr-1.6.1.tar.gz
+dd73cbdf6bef71f706bdf585e0f2abe2bfe6625c6bdbd2b29bfadd1e9891cd52c121081c05e1c905ce5ced01ea2828a62ad02abf13069058469d4528543269c8  no-self-update.patch
 "
