--- a/main/llvm19/APKBUILD
+++ b/main/llvm19/APKBUILD
@@ -11,7 +11,7 @@ pkgver=19.1.7
 _majorver=${pkgver%%.*}
 _prevmajorver=$((_majorver - 1))
 pkgname=$_pkgname$_majorver
-pkgrel=4
+pkgrel=5
 pkgdesc="Low Level Virtual Machine compiler system, version $_majorver"
 arch="all"
 url="https://llvm.org/"
@@ -19,7 +19,7 @@ license="Apache-2.0"
 depends_dev="$pkgname=$pkgver-r$pkgrel libffi-dev zlib-dev zstd-dev"
 # See https://gitlab.alpinelinux.org/alpine/aports/-/commit/51d2fba931fb2ef0046dea19405a9290c8735051#note_234651
 [ -z "$BOOTSTRAP" ] && depends_dev="$depends_dev $pkgname-test-utils=$pkgver-r$pkgrel"
-makedepends_host="$depends_dev binutils-dev curl-dev libxml2-dev"
+makedepends_host="$depends_dev binutils-dev curl-dev libxml2-dev~2.13"
 makedepends_build="chrpath cmake python3 py3-setuptools samurai"
 # diffutils for diff: unrecognized option: strip-trailing-cr
 # coreutils for 'od' binary
