main/e2fsprogs: explicitly disable udev rules
Avoid accidentally including udev rules when
udev-dev is installed.

--- a/main/e2fsprogs/APKBUILD
+++ b/main/e2fsprogs/APKBUILD
@@ -37,6 +37,7 @@ build() {
 		--sysconfdir=/etc \
 		--mandir=/usr/share/man \
 		--localstatedir=/var \
+		--with-udev-rules-dir=no \
 		--enable-elf-shlibs \
 		--enable-symlink-install \
 		--disable-fsck \
