main/clang19: rebuild against libxml2-2.13

--- a/main/clang19/APKBUILD
+++ b/main/clang19/APKBUILD
@@ -4,7 +4,7 @@
 # Contributor: omni <omni+alpine@hack.org>
 # Maintainer: Natanael Copa <ncopa@alpinelinux.org>
 pkgver=19.1.7
-pkgrel=4
+pkgrel=5
 _sover=${pkgver%.*}
 _llvmver=${pkgver%%.*}
 pkgname=clang$_llvmver
@@ -16,7 +16,7 @@ options="!check" # fail to build
 makedepends="
 	cmake
 	help2man
-	libxml2-dev
+	libxml2-dev~2.13
 	llvm$_llvmver-dev
 	llvm$_llvmver-gtest
 	llvm$_llvmver-static
