--- a/main/abuild/APKBUILD
+++ b/main/abuild/APKBUILD
@@ -1,8 +1,7 @@
 # Maintainer: Natanael Copa <ncopa@alpinelinux.org>
 pkgname=abuild
-pkgver=3.14.1
-_ver=${pkgver%_git*}
-pkgrel=7
+pkgver=3.15.0_rc2
+pkgrel=0
 pkgdesc="Script to build Alpine Packages"
 url="https://gitlab.alpinelinux.org/alpine/abuild/"
 arch="all"
@@ -34,13 +33,7 @@ subpackages="
 	"
 options="suid"
 pkggroups="abuild"
-source="https://gitlab.alpinelinux.org/alpine/abuild/-/archive/$pkgver/abuild-$pkgver.tar.gz
-	0001-abuild-parse-ORIGIN-in-rpaths-correctly.patch
-	tar-arguments.patch
-	0001-abuild-add-option-C-DIR-to-allow-change-directory.patch
-	usr-share-cmake.patch
-	0001-abuild-In-default-openrc-subpackage-also-move-etc-us.patch
-	"
+source="https://gitlab.alpinelinux.org/alpine/abuild/-/archive/$pkgver/abuild-$pkgver.tar.gz"
 builddir="$srcdir"/abuild-$pkgver
 
 build() {
@@ -110,7 +103,7 @@ pypi() {
 
 _rootbld() {
 	pkgdesc="Build packages in chroot"
-	depends="abuild bubblewrap cmd:envsubst git"
+	depends="abuild bubblewrap cmd:envsubst"
 	mkdir -p "$subpkgdir"
 }
 
@@ -124,10 +117,5 @@ _sudo() {
 }
 
 sha512sums="
-49e243114933f3013884f0014fc8e5f142ff146de3d9ddb62e5ad98689cb1bf2bc8172da0331943f44b106dca4fd6fcdd917f5439e82facbb97eccc0f3459f37  abuild-3.14.1.tar.gz
-9db4fa9986ffda62257298d4eefa82bc49a3c88195928729adebfefa22090dbbee60c8c1f4105e762bad55bd67fe3ceda1b8ec6385a1a83ce0741a3acf88c9a2  0001-abuild-parse-ORIGIN-in-rpaths-correctly.patch
-824e936eed3699e8b18ad0c9a2462ea2ec0995111edbb595188b29a2e728b7ec9a4c445fba706d36c9954a6d349bb92b4eff0f20715758051f14065208a9778f  tar-arguments.patch
-4b43ed25d97593996b4154ef6f2e4253ddfb1b8cc85fba18c5dd15e01c9ee8fbb8b3db80203455a1120f779615d834e79c600d40e26ee97f64ff56fe28c44d46  0001-abuild-add-option-C-DIR-to-allow-change-directory.patch
-8e5a384c181100df1656c4db2ec429c3861ee6e3a9e0e12951f4e04160e8358ea4332bdfeb5c70f57f578b684e489fdeccbbff067f799430ec422fdc594c0f97  usr-share-cmake.patch
-ba2e536d8abc8cde49b7df96279a4773332cb00c578b30e0888eb832fefea599a417c48bddb315fe8a33c3b05be303de9048d20566c8c8bee21f2797c5b43f61  0001-abuild-In-default-openrc-subpackage-also-move-etc-us.patch
+ee5214735a20a237120af5320f8d3de636c5e47b03b902b2820eacc805dd1100d274b2aca7a1a21a5fdcd27f260575cf019e449998948b2815f532c2aedbc767  abuild-3.15.0_rc2.tar.gz
 "
