--- a/main/hwloc/APKBUILD
+++ b/main/hwloc/APKBUILD
@@ -1,12 +1,12 @@
 # Maintainer: Krassy Boykinov <kboykinov@teamcentrixx.com>
 pkgname=hwloc
 pkgver=2.12.0
-pkgrel=2
+pkgrel=3
 pkgdesc="Portable abstraction of hierarchical hardware architectures"
 url="https://www.open-mpi.org/"
 arch="all"
 license="BSD-3-Clause"
-makedepends="cairo-dev eudev-dev libxml2-dev ncurses-dev numactl-dev"
+makedepends="cairo-dev eudev-dev libxml2-dev~2.13 ncurses-dev numactl-dev"
 options="!check" # fails on multiple arches with different tests
 subpackages="
 	$pkgname-dev
