main/bind: force libxml 2.13
The upgrade of libxml2 to version 2.14 has been reverted because it
causes all kinds of build issues, but is still available on the
builders. Make sure version 2.13 is picked when building bind.

--- a/main/bind/APKBUILD
+++ b/main/bind/APKBUILD
@@ -10,7 +10,7 @@ _ver=${pkgver%_p*}
 _p=${pkgver#*_p}
 _major=${pkgver%%.*}
 [ "$_p" != "$pkgver" ] && _ver="$_ver-P$_p"
-pkgrel=2
+pkgrel=3
 pkgdesc="The ISC DNS server"
 url="https://www.isc.org/bind/"
 arch="all"
@@ -31,7 +31,7 @@ makedepends="
 	krb5-dev
 	libcap-dev
 	libuv-dev
-	libxml2-dev
+	libxml2-dev~2.13
 	json-c-dev
 	linux-headers
 	nghttp2-dev
