main/apache2: force libxml 2.13
The upgrade of libxml2 to version 2.14 has been reverted because it
causes all kinds of build issues, but is still available on the
builders. Make sure version 2.13 is picked when building apache2-proxy-html.

--- a/main/apache2/APKBUILD
+++ b/main/apache2/APKBUILD
@@ -3,7 +3,7 @@
 pkgname=apache2
 _pkgreal=httpd
 pkgver=2.4.63
-pkgrel=2
+pkgrel=3
 pkgdesc="A high performance Unix-based HTTP server"
 url="https://httpd.apache.org/"
 arch="all"
@@ -17,7 +17,7 @@ makedepends="
 	autoconf
 	automake
 	brotli-dev
-	libxml2-dev
+	libxml2-dev~2.13
 	lua-dev
 	nghttp2-dev
 	openssl-dev
