main/gettext: fix test on armhf
Remove -Os and -O1 in $CFLAGS and $LDFLAGS respectively when running
tests on armhf, which triggered a test-memset_explicit test failure.

--- a/main/gettext/APKBUILD
+++ b/main/gettext/APKBUILD
@@ -49,8 +49,13 @@ build() {
 }
 
 check() {
-	# test-verify fails if run in parallel
-	make -j1 check
+	case "$CARCH" in
+		# test-verify fails if run in parallel
+		# test-memset_explicit fails on armhf if -Os/-01 are set in CFLAGS/LDFLAGS
+		armhf) make -j1 check CFLAGS="${CFLAGS/-Os/}" LDFLAGS="${LDFLAGS/-O1,/}" ;;
+		*) make -j1 check ;;
+	esac
+
 }
 
 package() {
