community/ausweisapp2: upgrade to 2.3.1
https://github.com/Governikus/AusweisApp/compare/2.3.0...2.3.1

--- a/community/ausweisapp2/APKBUILD
+++ b/community/ausweisapp2/APKBUILD
@@ -1,7 +1,7 @@
 # Contributor: André Klitzing <aklitzing@gmail.com>
 # Maintainer: André Klitzing <aklitzing@gmail.com>
 pkgname=ausweisapp2
-pkgver=2.3.0
+pkgver=2.3.1
 pkgrel=0
 pkgdesc="Official authentication app for German ID card and residence permit"
 url="https://www.ausweisapp.bund.de/"
@@ -29,9 +29,7 @@ makedepends="
 	samurai
 	"
 subpackages="$pkgname-doc"
-source="https://github.com/Governikus/AusweisApp2/releases/download/$pkgver/AusweisApp-$pkgver.tar.gz
-	"
-options="!check" # no upstream tests in release build
+source="https://github.com/Governikus/AusweisApp/archive/refs/tags/$pkgver/ausweisapp2-$pkgver.tar.gz"
 builddir="$srcdir/AusweisApp-$pkgver"
 
 build() {
@@ -41,8 +39,13 @@ build() {
 	cmake -B build -G Ninja \
 		-DCMAKE_BUILD_TYPE=MinSizeRel \
 		-DCMAKE_INSTALL_PREFIX=/usr \
+		-DBUILD_TESTING="$(want_check && echo ON || echo OFF)" \
 		$cmake_crossopts .
 	cmake --build build
+}
+
+check() {
+	ctest --test-dir build
 }
 
 package() {
@@ -50,5 +53,5 @@ package() {
 }
 
 sha512sums="
-c2dcdc8df73b643221e7a3f9e7a8c8a85ac41a3ce106e97c798f8f58f8863fd424f7ea428a9adf5dca63bdee61657363c210dde2a5d3e40097e50af7a09f4f51  AusweisApp-2.3.0.tar.gz
+88d58134ea4cd4e6084976880cdaa14cf2db2444081834fd7aea4456589a02cb55d9897921020293e331fd7c92f342505babd5810d1d4b712fa1c2d0e925732f  ausweisapp2-2.3.1.tar.gz
 "
