community/apptainer: upgrade to 1.4.0 && enable on loongarch64

--- a/community/apptainer/APKBUILD
+++ b/community/apptainer/APKBUILD
@@ -1,12 +1,11 @@
 # Contributor: Oleg Titov <oleg.titov@gmail.com>
 # Maintainer: Oleg Titov <oleg.titov@gmail.com>
 pkgname=apptainer
-pkgver=1.3.6
-pkgrel=3
+pkgver=1.4.0
+pkgrel=0
 pkgdesc="Application containers for Linux"
 url="https://apptainer.org/"
-# loongarch64: blocked by github.com/cilium/ebpf
-arch="all !loongarch64"
+arch="all"
 license="BSD-3-Clause AND BSD-3-Clause-LBNL"
 # Lots of tests fail due to:
 # - no root privilege
@@ -25,9 +24,7 @@ subpackages="
 	$pkgname-suid:_suid
 	$pkgname-bash-completion
 	"
-source="apptainer-$pkgver.tar.gz::https://github.com/apptainer/apptainer/archive/refs/tags/v$pkgver.tar.gz
-	update-container-storage.patch
-	"
+source="apptainer-$pkgver.tar.gz::https://github.com/apptainer/apptainer/archive/refs/tags/v$pkgver.tar.gz"
 
 # secfixes:
 #   1.1.8-r0:
@@ -74,6 +71,5 @@ _suid() {
 }
 
 sha512sums="
-3c1e4f08b9337dd1de9340ab411bd67ee29770231a45594273ea8fd17d822cef7a68e8467d96eb8e6e7fe81c7954f38ddf98cc2bd96919dd1968ec9b958c4362  apptainer-1.3.6.tar.gz
-bc2abde7b66f878d1fa28a45f6e7c7a023eea7d10e9aa82cef5b62ae55f31efd162f28e3ffb571245eed7048144d696b569ee4599419fe80aba5bbabed55f836  update-container-storage.patch
+835422d9dbc7f1efc400a52a21be1783e6ecb7b7e0cd09168e2de3cfc8ef1ec8f977066c515e759d8816fe3c59bfec675587d1cacea164f565f81dd75ada38e2  apptainer-1.4.0.tar.gz
 "
