main/rrdtool: add tcl bindings
This PR adds the tcl-rrd sub package to rrdtool.

The rrd binding can be loaded with the Tcl command:

package require Rrd

It returns the version: 1.9.0

--- a/main/rrdtool/APKBUILD
+++ b/main/rrdtool/APKBUILD
@@ -9,9 +9,9 @@ arch="all"
 license="GPL-2.0-or-later"
 depends="font-cantarell"
 makedepends="libart-lgpl-dev libpng-dev freetype-dev perl-dev cairo-dev libxml2-dev
-	pango-dev lua lua-dev groff autoconf automake libtool"
+	pango-dev lua lua-dev tcl-dev groff autoconf automake libtool"
 checkdepends="diffutils"
-subpackages="$pkgname-dev $pkgname-doc perl-rrd:perl_rrd lua-rrd:lua_rrd
+subpackages="$pkgname-dev $pkgname-doc perl-rrd:perl_rrd lua-rrd:lua_rrd tcl-rrd:tcl_rrd
 	$pkgname-cached $pkgname-cached-openrc:cached_openrc $pkgname-cgi $pkgname-utils librrd:libs"
 source="https://github.com/oetiker/rrdtool-1.x/releases/download/v$pkgver/rrdtool-$pkgver.tar.gz
 	lua-install-cmod.patch
@@ -36,7 +36,6 @@ build() {
 		--host=$CHOST \
 		--prefix=/usr \
 		--disable-nls \
-		--disable-tcl \
 		--disable-ruby \
 		--enable-rrdcgi \
 		--enable-perl-site-install \
@@ -76,6 +75,14 @@ lua_rrd() {
 	pkgdesc="Lua interface for rrdtool"
 	mkdir -p "$subpkgdir"/usr/lib/
 	mv "$pkgdir"/usr/lib/lua "$subpkgdir"/usr/lib/
+}
+
+tcl_rrd() {
+	depends=
+	pkgdesc="Tcl interface for rrdtool"
+	mkdir -p "$subpkgdir"/usr/lib/
+	mv "$pkgdir"/usr/lib/tclrrd"$pkgver".so "$subpkgdir"/usr/lib/
+	mv "$pkgdir"/usr/lib/rrdtool "$subpkgdir"/usr/lib/
 }
 
 cached() {
