community/py3-datapi: upgrade to 0.3.1

--- a/community/py3-datapi/APKBUILD
+++ b/community/py3-datapi/APKBUILD
@@ -2,13 +2,13 @@
 # Maintainer: Iztok Fister, Jr. <iztok@iztok-jr-fister.eu>
 pkgname=py3-datapi
 _pkgorig=datapi
-pkgver=0.3.0
+pkgver=0.3.1
 pkgrel=0
 pkgdesc="ESEE Data Stores API Python Client"
 url="https://github.com/ecmwf-projects/datapi"
 arch="noarch"
 license="Apache-2.0"
-depends="py3-attrs py3-requests py3-tqdm py3-setuptools"
+depends="py3-attrs py3-requests py3-tqdm py3-setuptools_scm"
 makedepends="py3-gpep517 py3-wheel"
 checkdepends="py3-pytest-xdist"
 subpackages="$pkgname-pyc"
@@ -17,6 +17,7 @@ builddir="$srcdir/$_pkgorig-$pkgver"
 options="!check" # we need API key for test
 
 build() {
+	export SETUPTOOLS_SCM_PRETEND_VERSION=$pkgver
 	gpep517 build-wheel \
 		--wheel-dir .dist \
 		--output-fd 3 3>&1 >&2
@@ -34,5 +35,5 @@ package() {
 }
 
 sha512sums="
-df125ffc4d63cbe0499f3d454d268f2edc1107ccab9b01a39e3aeff05f32ca834471f5873f4aa6b38c00992fd97841784cb3c33cd05ae6bbace9027c4fd12e79  py3-datapi-0.3.0.tar.gz
+fd54d74412c92e983736bdff9cbad9228d806d4c7da757f650004da0fd7bbd2c5d692d63779d33d2db46f1913f04864d442068b36dc1fa23a25f70c34a0cc15a  py3-datapi-0.3.1.tar.gz
 "
