main/libatomic_ops: take over maintainership & move from community
emailed TBK and received permission to take over maintainership of this

--- a/main/libatomic_ops/APKBUILD
+++ b/main/libatomic_ops/APKBUILD
@@ -1,5 +1,7 @@
-# Maintainer: TBK <alpine@jjtc.eu>
+# Contributor: TBK <alpine@jjtc.eu>
 # Contributor: Bartłomiej Piotrowski <bpiotrowski@alpinelinux.org>
+# Maintainer: Celeste <cielesti@protonmail.com>
+maintainer="Celeste <cielesti@protonmail.com>"
 pkgname=libatomic_ops
 pkgver=7.8.2
 pkgrel=0
@@ -12,10 +14,11 @@ subpackages="$pkgname-static $pkgname-dev $pkgname-doc"
 source="https://github.com/ivmai/libatomic_ops/releases/download/v$pkgver/libatomic_ops-$pkgver.tar.gz"
 
 build() {
-	CFLAGS="$CFLAGS -O2 -flto=auto" \
+	CFLAGS="${CFLAGS//-Os/-O2} -flto=auto" \
 	cmake -B build -G Ninja \
 		-DCMAKE_BUILD_TYPE=None \
 		-DCMAKE_INSTALL_PREFIX=/usr \
+		-DCMAKE_INSTALL_LIBDIR=lib \
 		-DBUILD_SHARED_LIBS=ON \
 		-Dbuild_tests="$(want_check && echo ON || echo OFF)"
 	cmake --build build
@@ -23,6 +26,7 @@ build() {
 	cmake -B build-static -G Ninja \
 		-DCMAKE_BUILD_TYPE=None \
 		-DCMAKE_INSTALL_PREFIX=/usr \
+		-DCMAKE_INSTALL_LIBDIR=lib \
 		-DBUILD_SHARED_LIBS=OFF \
 		-Dbuild_tests=OFF
 	cmake --build build-static
