--- a/main/ecl/APKBUILD
+++ b/main/ecl/APKBUILD
@@ -29,6 +29,7 @@ prepare() {
 }
 
 build() {
+	CFLAGS="$CFLAGS -std=gnu17" \
 	./configure \
 		--build=$CBUILD \
 		--host=$CHOST \
@@ -39,8 +40,7 @@ build() {
 		--localstatedir=/var/state/ecl \
 		--enable-boehm=system \
 		--enable-gmp=system \
-		--enable-libatomic=system \
-		--with-cxx
+		--enable-libatomic=system
 	make
 }
 
