community/carapace: upgrade to 1.3.0

--- a/community/carapace/APKBUILD
+++ b/community/carapace/APKBUILD
@@ -1,8 +1,8 @@
-# Contributor: Andrej Kolchin <KAAtheWise@protonmail.com>
-# Maintainer: Andrej Kolchin <KAAtheWise@protonmail.com>
+# Contributor: Andrej Kolchin <self@kaathewise.net>
+# Maintainer: Andrej Kolchin <self@kaathewise.net>
 pkgname=carapace
-pkgver=1.2.1
-pkgrel=2
+pkgver=1.3.0
+pkgrel=0
 pkgdesc="Multi-shell multi-command argument completer"
 url="https://carapace.sh/"
 arch="all"
@@ -12,11 +12,7 @@ source="$pkgname-$pkgver.tar.gz::https://github.com/rsteube/carapace-bin/archive
 # fixes the tar archive unpacking to carapace-bin-$pkgver
 _pkgname=carapace-bin
 builddir="$srcdir/$_pkgname-$pkgver"
-
-export GOCACHE="${GOCACHE:-"$srcdir/go-cache"}"
-export GOTMPDIR="${GOTMPDIR:-"$srcdir"}"
-export GOMODCACHE="${GOMODCACHE:-"$srcdir/go"}"
-export GOFLAGS="$GOFLAGS -modcacherw"
+options="net"
 
 build() {
 	go generate ./cmd/carapace/...
@@ -33,8 +29,9 @@ check() {
 
 package() {
 	install -Dm755 carapace -t "$pkgdir"/usr/bin
+	install -Dm644 LICENSE -t "$pkgdir"/usr/share/licenses/$pkgname/
 }
 
 sha512sums="
-1489d28784a57893d35e7c5cd2619770513ccc21e7b2ef181b78f926c1c26df8dfcec0f79ef40f0bcac8dbe658ac3ed3e2f4a3bddd0e15966ecdf8fc3c2b03ef  carapace-1.2.1.tar.gz
+117eec08d55fea41d47288683a07d720b376cc71ea6e06d020e74e2f5989cc900afd1706f3a1c88a5b878c7588fabc855a6e6767e26f08ad646f3a11f60a7ac3  carapace-1.3.0.tar.gz
 "
