community/py3-pyflakes: take over maintainership
Dependency of py3-flake8 and previous maintainer is inactive

--- a/community/py3-pyflakes/APKBUILD
+++ b/community/py3-pyflakes/APKBUILD
@@ -1,6 +1,7 @@
 # Contributor: Peter Bui <pnutzh4x0r@gmail.com>
-# Maintainer: Fabian Affolter <fabian@affolter-engineering.ch>
+# Contributor: Fabian Affolter <fabian@affolter-engineering.ch>
 # NOTE: ensure compatibility with py3-flake8! (#11378)
+maintainer="fossdd <fossdd@pwned.life>"
 pkgname=py3-pyflakes
 pkgver=3.3.2
 pkgrel=0
