community/py3-pycodestyle: take over maintainership
Dependency of py3-flake8 and previous maintainer is inactive

--- a/community/py3-pycodestyle/APKBUILD
+++ b/community/py3-pycodestyle/APKBUILD
@@ -1,5 +1,6 @@
 # Contributor: Leonardo Arena <rnalrd@alpinelinux.org>
-# Maintainer: Keith Maxwell <keith.maxwell@gmail.com>
+# Contributor: Keith Maxwell <keith.maxwell@gmail.com>
+maintainer="fossdd <fossdd@pwned.life>"
 pkgname=py3-pycodestyle
 _pkgname=pycodestyle
 pkgver=2.13.0
