main/mbedtls: security upgrade to 3.6.3
framework/ is now included in the releases tarball

--- a/main/mbedtls/APKBUILD
+++ b/main/mbedtls/APKBUILD
@@ -2,9 +2,8 @@
 # Contributor: Łukasz Jendrysik <scadu@yandex.com>
 # Maintainer: Natanael Copa <ncopa@alpinelinux.org>
 pkgname=mbedtls
-pkgver=3.6.2 # long-time support branch
+pkgver=3.6.3 # long-time support branch
 pkgrel=0
-_framework_commit=d9a70c758a5a511020240bbcc86f6d647d64fe96
 pkgdesc="Light-weight cryptographic and SSL/TLS library"
 url="https://www.trustedfirmware.org/projects/mbed-tls/"
 arch="all"
@@ -12,7 +11,6 @@ license="Apache-2.0 OR GPL-2.0-or-later"
 makedepends="cmake perl python3 samurai"
 subpackages="$pkgname-static $pkgname-dev $pkgname-utils"
 source="$pkgname-$pkgver.tar.gz::https://github.com/ARMmbed/mbedtls/archive/v$pkgver.tar.gz
-	$pkgname-framework-$_framework_commit.tar.gz::https://github.com/Mbed-TLS/mbedtls-framework/archive/$_framework_commit.tar.gz
 	gcc14.patch
 	"
 
@@ -20,6 +18,9 @@ source="$pkgname-$pkgver.tar.gz::https://github.com/ARMmbed/mbedtls/archive/v$pk
 # https://mbed-tls.readthedocs.io/en/latest/security-advisories/
 
 # secfixes:
+#   3.6.3-r0:
+#     - CVE-2025-27809
+#     - CVE-2025-27810
 #   3.6.2-r0:
 #     - CVE-2024-49195
 #   3.6.1-r0:
@@ -62,10 +63,6 @@ source="$pkgname-$pkgver.tar.gz::https://github.com/ARMmbed/mbedtls/archive/v$pk
 prepare() {
 	default_prepare
 
-	# TF-PSA-Crypto and Mbed TLS version-independent build and test framework
-	rmdir "$builddir"/framework
-	mv "$srcdir/$pkgname-framework-$_framework_commit" "$builddir"/framework
-
 	# Enable flags for non-embedded systems.
 	python3 scripts/config.py set MBEDTLS_THREADING_C
 	python3 scripts/config.py set MBEDTLS_THREADING_PTHREAD
@@ -107,7 +104,6 @@ static() {
 }
 
 sha512sums="
-ad5a8de072cd7bede21378a3301d8de7c4eec8e113ebe2a3ffe5bf8ebed1b236a52ae0425abe45eafdc534af65b51076ca458e342950174bf1bdbbc06d1bdad1  mbedtls-3.6.2.tar.gz
-1ee67f1c24a5b0dfc187fba377da9d8e799dc9976019cba4b2f75d49e2f82a62c6f72b56f42c02ad942e5e9202e0b81cf24e50355018f6ad80a6ab6579d2ec88  mbedtls-framework-d9a70c758a5a511020240bbcc86f6d647d64fe96.tar.gz
+f31fd90d78634af8c17910f1a356010c94c13605b7f9a99ae74c37764f7dec7d29a5a7a8c1355b31e3ed32c68a6ed23cbe8e53c2a249f4d457906a86d35c55d4  mbedtls-3.6.3.tar.gz
 3c07e8f773295a08b1f215b64f1f62e194ec4fa54b6485107a3db0d731e12df1a88321852dd5caeb5f1f4931695168c9618f316cfecfd92c42c88f610285cef6  gcc14.patch
 "
