--- a/community/py3-yarl/APKBUILD
+++ b/community/py3-yarl/APKBUILD
@@ -1,7 +1,7 @@
 # Contributor: Fabian Affolter <fabian@affolter-engineering.ch>
 # Maintainer: Fabian Affolter <fabian@affolter-engineering.ch>
 pkgname=py3-yarl
-pkgver=1.13.1
+pkgver=1.18.3
 pkgrel=0
 pkgdesc="Yet another URL library"
 url="https://yarl.aio-libs.org/"
@@ -12,11 +12,17 @@ makedepends="
 	cython
 	py3-expandvars
 	py3-gpep517
+	py3-propcache
 	py3-setuptools
 	py3-wheel
 	python3-dev
 	"
-checkdepends="py3-pytest-xdist py3-pytest-cov"
+checkdepends="
+	py3-hypothesis
+	py3-pytest-codspeed
+	py3-pytest-cov
+	py3-pytest-xdist
+	"
 subpackages="$pkgname-pyc"
 source="https://github.com/aio-libs/yarl/releases/download/v$pkgver/yarl-$pkgver.tar.gz"
 builddir="$srcdir/yarl-$pkgver"
@@ -40,5 +46,5 @@ package() {
 }
 
 sha512sums="
-8fccb36dbb019d02fc50f006a3a59decd413abfc6387fd7c1220444f4f79412be1d5119c32fd668b3d553fbaf4de64b9135345e8300c7fa025d892c847955f88  yarl-1.13.1.tar.gz
+1686c5ef1b5f3e1cebd121abb7916e45f4a9b08d941a80c34861e87f6121187ee7a553a373405a9fef2332177adf55ffe89bc9a3cabbf24e31905357fdeceba3  yarl-1.18.3.tar.gz
 "
