community/py3-yarl: take over maintainership

--- a/community/py3-yarl/APKBUILD
+++ b/community/py3-yarl/APKBUILD
@@ -1,5 +1,5 @@
 # Contributor: Fabian Affolter <fabian@affolter-engineering.ch>
-# Maintainer: Fabian Affolter <fabian@affolter-engineering.ch>
+maintainer="fossdd <fossdd@pwned.life>"
 pkgname=py3-yarl
 pkgver=1.18.3
 pkgrel=0
