community/uutils: upgrade to 0.0.30
enable on s390x

--- a/community/uutils/APKBUILD
+++ b/community/uutils/APKBUILD
@@ -1,11 +1,10 @@
 # Maintainer: omni <omni+alpine@hack.org>
 maintainer="omni <omni+alpine@hack.org>"
 pkgname=uutils
-pkgver=0.0.28
-pkgrel=5
+pkgver=0.0.30
+pkgrel=0
 pkgdesc="Rust rewrite of the GNU coreutils"
-# s390x: blocked by nix crate
-arch="all !s390x"
+arch="all"
 url="https://uutils.github.io/coreutils/"
 license="MIT"
 makedepends="cargo help2man oniguruma-dev cargo-auditable"
@@ -174,5 +173,5 @@ _stat() {
 }
 
 sha512sums="
-3c3eb14f75d5dd774b422af236870cc1c55a7f4df5be3979ff78c5de31f6ac9c77b6b0f10c61886d784932cc461968caa3d5c76f21a22ad5fe319cced9b7f5aa  uutils-coreutils-0.0.28.tar.gz
+4d9f002329513e4cbf8787d050d852a209a02e9fbea84a63e442ace4fec38ce362dbac5ccee341834ade5f96586be393d6fc64e8421285598dd64804b660e633  uutils-coreutils-0.0.30.tar.gz
 "
