main/mbedtls: security upgrade to 2.28.10

--- a/main/mbedtls/APKBUILD
+++ b/main/mbedtls/APKBUILD
@@ -2,7 +2,7 @@
 # Contributor: Łukasz Jendrysik <scadu@yandex.com>
 # Maintainer: Natanael Copa <ncopa@alpinelinux.org>
 pkgname=mbedtls
-pkgver=2.28.9 # long-time support branch
+pkgver=2.28.10 # long-time support branch
 pkgrel=0
 pkgdesc="Light-weight cryptographic and SSL/TLS library"
 url="https://www.trustedfirmware.org/projects/mbed-tls/"
@@ -16,6 +16,9 @@ source="$pkgname-$pkgver.tar.gz::https://github.com/ARMmbed/mbedtls/archive/v$pk
 # https://mbed-tls.readthedocs.io/en/latest/security-advisories/
 
 # secfixes:
+#   2.28.10-r0:
+#     - CVE-2025-27809
+#     - CVE-2025-27810
 #   2.28.9-r0:
 #     - CVE-2024-45157
 #   2.28.8-r0:
@@ -95,5 +98,5 @@ static() {
 }
 
 sha512sums="
-95cc33e052670ae69a0d6779e1e675d176cecc263d795cedaebb8e01bc89ee6e91d843fd94337a7ef885440a08a30bbd8bdaf26664ae45f3c4fc18eb0a00c033  mbedtls-2.28.9.tar.gz
+4d25f09bda60afa0a657e247ed939ad30e82f790f901f73590ea8007047e3c081e97c4bbc9f483584ef92c75d45e356a3aab333be9a8c18be980197c706101f5  mbedtls-2.28.10.tar.gz
 "
