--- a/community/mbedtls2/APKBUILD
+++ b/community/mbedtls2/APKBUILD
@@ -2,22 +2,25 @@
 # Contributor: Łukasz Jendrysik <scadu@yandex.com>
 # Maintainer: Natanael Copa <ncopa@alpinelinux.org>
 pkgname=mbedtls2
-pkgver=2.28.8 # long-time support branch
-pkgrel=1
+pkgver=2.28.10 # long-time support branch
+pkgrel=0
 pkgdesc="Light-weight cryptographic and SSL/TLS library"
 url="https://www.trustedfirmware.org/projects/mbed-tls/"
 arch="all"
 license="Apache-2.0 OR GPL-2.0-or-later"
 makedepends="cmake perl python3 samurai"
 subpackages="$pkgname-static $pkgname-dev $pkgname-utils"
-source="mbedtls-$pkgver.tar.gz::https://github.com/ARMmbed/mbedtls/archive/v$pkgver.tar.gz
-	gcc14.patch"
+source="mbedtls-$pkgver.tar.gz::https://github.com/ARMmbed/mbedtls/archive/v$pkgver.tar.gz"
 builddir="$srcdir/mbedtls-$pkgver"
 
 # Track security issues
 # https://tls.mbed.org/security
 
 # secfixes:
+#   2.28.10-r0:
+#     - CVE-2024-45157
+#     - CVE-2025-27809
+#     - CVE-2025-27810
 #   2.28.8-r0:
 #     - CVE-2024-28960
 #   2.28.7-r0:
@@ -93,6 +96,5 @@ static() {
 }
 
 sha512sums="
-72a25a6b2a132545d32c7a6819bde569a315f2e83049467653af6347c918e4781462dceca21c64c76a4af7d19cedaf968f48b3f0309a6b0289466c087e49dd38  mbedtls-2.28.8.tar.gz
-566953fea9e60410333b7605a72b74b74ebee7bc8b4b76f879fdb19c9bc2b83520b3b8cfc0e9640ff8ad8cf8f9f151a134b95c090653f7002fdcf441afe31c83  gcc14.patch
+4d25f09bda60afa0a657e247ed939ad30e82f790f901f73590ea8007047e3c081e97c4bbc9f483584ef92c75d45e356a3aab333be9a8c18be980197c706101f5  mbedtls-2.28.10.tar.gz
 "
