community/conduit: use default clang ver

--- a/community/conduit/APKBUILD
+++ b/community/conduit/APKBUILD
@@ -2,12 +2,12 @@
 # Maintainer: Patrycja Rosa <alpine@ptrcnull.me>
 pkgname=conduit
 pkgver=0.9.0
-pkgrel=5
+pkgrel=6
 pkgdesc="Simple, fast and reliable chat server powered by Matrix"
 url="https://conduit.rs/"
 arch="all"
 license="Apache-2.0"
-makedepends="cargo sqlite-dev cargo-auditable clang17-libclang rocksdb-dev snappy-dev"
+makedepends="cargo sqlite-dev cargo-auditable clang-libclang rocksdb-dev snappy-dev"
 install="$pkgname.pre-install"
 subpackages="$pkgname-openrc"
 source="https://gitlab.com/famedly/conduit/-/archive/v$pkgver/conduit-v$pkgver.tar.gz
