--- a/community/task3/APKBUILD
+++ b/community/task3/APKBUILD
@@ -2,8 +2,8 @@
 # Maintainer: mio <miyopan@e.email>
 maintainer="mio <miyopan@e.email>"
 pkgname=task3
-pkgver=3.4.0
-pkgrel=1
+pkgver=3.4.1
+pkgrel=0
 pkgdesc="Command-line to-do list manager"
 url="https://taskwarrior.org"
 arch="all"
@@ -11,6 +11,8 @@ license="MIT"
 install="$pkgname.post-install"
 makedepends="
 	cargo
+	cargo-auditable
+	clang-libclang
 	cmake
 	corrosion
 	sqlite-dev
@@ -25,7 +27,6 @@ subpackages="$pkgname-doc
 # Release tarball excludes the test suite, extract from the archive tarball
 source="https://github.com/GothenburgBitFactory/taskwarrior/releases/download/v$pkgver/task-$pkgver.tar.gz
 	https://github.com/GothenburgBitFactory/taskwarrior/archive/v$pkgver/task-archive-$pkgver.tar.gz
-	fix-suppressing-news-nag.patch
 	"
 builddir="$srcdir"/task-$pkgver
 
@@ -70,7 +71,6 @@ package() {
 }
 
 sha512sums="
-de14bddc910d92bb60c38550a22eef4e21b92bb63861bee0c84adc2f70a6e5fead06b7993ed3239d2308803dbec3139f57031655bb63821d61528dbcfd49a84e  task-3.4.0.tar.gz
-3477913affc8abe2b5f51a0be047e375506db02b1fa31c50f1433d1f43e76f573d196dc7e176eb4f5849db2152a66a4a2cd7abf6a28af526e4f8f85fa95da6c4  task-archive-3.4.0.tar.gz
-9bce80cc5866dd9816834b432d2dd51bd2393a538bc799e2f6d1c29967e5296693eab1c5dda0c76052ed7daa0b925361882149c685a23118b1cd8ed91eecd35c  fix-suppressing-news-nag.patch
+5a6479e2afcd5142e88349b792e00fcab4d54f6762db5be00221685a93baa3332a4a410b82f66679c15eff58a43be0e175cea440b2d7befbf4e9b723a695a869  task-3.4.1.tar.gz
+1d458a64bffe17eed8eb5c2cbdaf3db11954d76891e240b9caa8135c2eb5b2319c736fc77aec066ae0b28f1293cf9b94944a40a77c6b5eeb5c791bf2c15003d3  task-archive-3.4.1.tar.gz
 "
