community/can-utils: upgrade to 2025.01
pick upstream patch to fix libj1939.h

--- a/community/can-utils/APKBUILD
+++ b/community/can-utils/APKBUILD
@@ -1,7 +1,7 @@
 # Contributor: Milan P. Stanić <mps@arvanta.net>
 # Maintainer: Milan P. Stanić <mps@arvanta.net>
 pkgname=can-utils
-pkgver=2023.03
+pkgver=2025.01
 pkgrel=0
 pkgdesc="SocketCAN userspace utilities and tools"
 url="https://github.com/linux-can/can-utils"
@@ -9,7 +9,9 @@ arch="all"
 license="GPL-2.0-only AND BSD-3-Clause"
 options="!check" # package don't have tests
 makedepends="cmake linux-headers samurai"
-source="$pkgname-$pkgver.tar.gz::https://github.com/linux-can/can-utils/archive/v$pkgver.tar.gz"
+source="$pkgname-$pkgver.tar.gz::https://github.com/linux-can/can-utils/archive/v$pkgver.tar.gz
+	fix-libj1939.h.patch
+	"
 
 build() {
 	if [ "$CBUILD" != "$CHOST" ]; then
@@ -32,5 +34,6 @@ package() {
 }
 
 sha512sums="
-bf8f3e555bada4ce1e6f308b46daaab51664a0b6a1b793dc1a2aab46b44331f59635051eb3e75cb9b39999369a7fd463421a89ab60e74bc76ef2d84f6519c501  can-utils-2023.03.tar.gz
+bc5639c5d93af51cfb5920bc13efec2a660064d1809cb2cee9b234079d5288bc9db2bedf85fe841b8493f5554fbfbbe9f4bf5a88d8957f4a8ccdc3a1abf74153  can-utils-2025.01.tar.gz
+585113ba5df75c046f3913ff22df8db6b056ee155a4e13b675ebf7d12e2144130f9d9f0230692548deb6466acc510019e9c85b17502cc40a9828e8717c8fbbf1  fix-libj1939.h.patch
 "
